--- a/cms/Dockerfile
+++ b/cms/Dockerfile
@@ -1,21 +1,30 @@
-FROM node:18-alpine AS deps
-WORKDIR /app
-COPY package*.json .
-RUN npm install
+# Creating multi-stage build for production
+FROM node:20-alpine as build
+RUN apk update && apk add --no-cache build-base gcc autoconf automake zlib-dev libpng-dev vips-dev git > /dev/null 2>&1
+ARG NODE_ENV=production
+ENV NODE_ENV=${NODE_ENV}
 
-FROM node:18-alpine AS builder
-WORKDIR /app
-COPY --from=deps /app/node_modules ./node_modules
+WORKDIR /opt/
+COPY package.json package-lock.json ./
+RUN npm install -g node-gyp
+RUN npm config set fetch-retry-maxtimeout 600000 -g && npm install --only=production
+ENV PATH=/opt/node_modules/.bin:$PATH
+WORKDIR /opt/app
 COPY . .
 RUN npm run build
 
-FROM node:18-alpine
-WORKDIR /app
-COPY --from=builder /app/.env ./
-COPY --from=builder /app/.strapi-updater.json ./
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/package*.json ./
-COPY --from=builder /app/.strapi ./.strapi
-COPY --from=builder /app/dist ./dist
+# Creating final production image
+FROM node:20-alpine
+RUN apk add --no-cache vips-dev
+ARG NODE_ENV=production
+ENV NODE_ENV=${NODE_ENV}
+WORKDIR /opt/
+COPY --from=build /opt/node_modules ./node_modules
+WORKDIR /opt/app
+COPY --from=build /opt/app ./
+ENV PATH=/opt/node_modules/.bin:$PATH
+
+RUN chown -R node:node /opt/app
+USER node
 EXPOSE 1337
-CMD ["npm", "start"]
+CMD ["npm", "run", "start"]
