--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,9 +26,6 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
-    "tailwind-merge": "^2.5.4",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
-    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -46,6 +43,9 @@
     "eslint-config-next": "14.2.14",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss": "^3.4.14",
+    "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   }
