--- a/cms/Dockerfile
+++ b/cms/Dockerfile
@@ -27,6 +27,7 @@ ENV APP_KEYS=Kx/4nwbQa9DFkI59E8a7qA==,CJtHGBsnjsD34wCboAnzPQ==,qPhs0wrPccSB3wPNy
 ENV API_TOKEN_SALT=tICfiSY/QVDWOqyfhjanBQ==
 ENV ADMIN_JWT_SECRET=T4EPTsWxsPi8HIqGChXYbg==
 ENV TRANSFER_TOKEN_SALT=0NXBvDgXE4Hy/FiTSHZiCw==
+ENV JWT_SECRET=0lItjs2c0fk+qoWhdp2LWw==
 
 RUN chown -R node:node /opt/app
 USER node
